force-app/main/default/objects/vf_Assignment__c/vf_Assignment__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <pluralLabel>Assignments</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Assignment Number</label>
        <displayFormat>ASGN-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer assignments to projects</description>
</CustomObject>