force-app/main/default/objects/vf_Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>End date of the volunteer's assignment</description>
    <inlineHelpText>Date when the volunteer ended or will end this assignment</inlineHelpText>
</CustomField>