force-app/main/default/objects/vf_Assignment__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Match score calculated for this volunteer-project pairing</description>
    <inlineHelpText>Score indicating how well this volunteer matches this project (0-100)</inlineHelpText>
</CustomField>