force-app/main/default/objects/vf_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>vf_Project__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
    <description>Project the volunteer is assigned to</description>
    <inlineHelpText>The project this volunteer is assigned to</inlineHelpText>
</CustomField>