force-app/main/default/objects/vf_Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Start date of the volunteer's assignment</description>
    <inlineHelpText>Date when the volunteer started on this assignment</inlineHelpText>
</CustomField>