force-app/main/default/objects/vf_Assignment__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
    <description>Volunteer assigned to the project</description>
    <inlineHelpText>The volunteer assigned to this project</inlineHelpText>
</CustomField>